--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       font-size: 18px;
       color: #555;
     }
+
+    #countdown-timer {
+      font-size: 2em;
+      font-weight: bold;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -41,6 +47,10 @@
   <p>Awake time left: <span id="awake-days">0</span> days (excluding sleep).</p>
   <p class="timer">Time Remaining Today: <span id="time-left">00:00:00</span></p>
 </div>
+
+<h1>Total Remaining hours left to live</h1>
+<p>Update after each 24 hours passed:</p>
+<div id="countdown-timer"></div>
 
 <footer>
   <p>    🖥️ Nikhil Notse</p>
@@ -56,7 +66,7 @@
   console.log(days)
   const daysLived = (days) + Math.floor(currentAge / 4);
   let daysLeft = totalLifespanDays - daysLived;
-
+console.log(daysLeft)
   // Calculate total sleeping hours
   const sleepingHoursPerDay = 8;
   const totalSleepHours = daysLeft * sleepingHoursPerDay; // Sleep hours in remaining days
@@ -116,6 +126,48 @@
 // const inputMilliseconds = 172800000; // 2 days in milliseconds
 
 // console.log(`${inputMilliseconds} milliseconds is equal to ${days} days.`);
+
+
+ // Total remaining hours 
+ function initializeCountdown(hours) {
+  const secondsInAnHour = 3600;
+  let remainingSeconds = hours * secondsInAnHour;
+
+  const formatTime = (seconds) => {
+    const hrs = Math.floor(seconds / 3600);
+    const mins = Math.floor((seconds % 3600) / 60);
+    const secs = seconds % 60;
+    return `${hrs.toString().padStart(2, '0')} : Total Hours`;
+  };
+
+  const updateDisplay = () => {
+    document.getElementById("countdown-timer").innerText = formatTime(remainingSeconds);
+  };
+
+  const countdownInterval = setInterval(() => {
+    if (remainingSeconds <= 0) {
+      clearInterval(countdownInterval);
+      document.getElementById("countdown-timer").innerText = "Countdown Complete!";
+    } else {
+      remainingSeconds -= 1;
+      updateDisplay();
+    }
+  }, 1000);
+
+  updateDisplay(); // Initial display
+}
+ // Total remaining hours
+ function convertDaysToHours(days) {
+    const hours = days * 24;
+    return hours;
+}
+
+// Example usage:
+
+const hours = convertDaysToHours(daysLeft);
+console.log(`${daysLeft} days is equal to ${hours} hours.`);
+ 
+ initializeCountdown(361440);
 
 
 
