fixed the bug of total error not updating

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ console.log(daysLeft)
 const hours = convertDaysToHours(daysLeft);
 console.log(`${daysLeft} days is equal to ${hours} hours.`);
  
- initializeCountdown(361440);
+ initializeCountdown(hours);
 
 
 
